Fixed the purchases behaviour
- Fixed the naming on the messages returned from the app.
- Fixed errors where edit was not showing and receive buttons were not working.
- Fixed an error where circle selected was not being showed

--- a/inventory/static/css/style.css
+++ b/inventory/static/css/style.css
@@ -409,7 +409,7 @@ h4{
     height: 0.5rem;
 }
 .circleSelected{
-    opacity: 1;
+    opacity: 1 !important;
 }
 .circleFilled{
     opacity: 0.5;
